handle exceptions, fix swagger